removing open for non-reproducible test failure