@@ -1210,7 +1210,6 @@
                     --add-opens java.base/java.io=ALL-UNNAMED
                     --add-opens java.base/java.net=ALL-UNNAMED
                     --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                    --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
                     --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                 </javaModuleArgs>
             </properties>
